--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.2",
     "@material-ui/core": "^4.4.2",
+    "apollo-boost": "^0.4.4",
+    "graphql": "^14.5.8",
     "ol": "^6.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
